<resources>
    <string name="app_name">Verify Negotiator</string>
    <string name="app_logo">verify logo</string>
    <string name="hint_email">Type your email address</string>
    <string name="hint_password">Type your password</string>
    <string name="hint_name">Type your name</string>
    <string name="hint_contact">Type your contact number</string>
    <string name="hint_school">Type your school name</string>
    <string name="hint_designation">Type your designation</string>
    <string name="hint_address">Type your address</string>
    <string name="hint_location">Type your location</string>
    <string name="hint_other_details">Type your other details</string>
    <string name="label_login">Please log-in to access the negotiator app</string>
    <string name="btn_login">Sign In</string>
    <string name="btn_logging_in">Logging In...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_events">Events</string>
    <string name="menu_logout">Logout</string>
    <string name="btn_submit">Submit</string>
    <string name="navigation_view_header_title">VERIFY - Negotiator</string>
    <string name="failed_login">Invalid username/password. Please try again.</string>
    <string name="permission_location_rationale">This application needs to get the location or gps updates of the user</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_call_denied">You denied the location permission</string>
    <string name="permission_call_neverask">You disabled the gps permission</string>
    <string name="locations_prompt">Select a location</string>
</resources>
